# CMakeList.txt : CMake project for Robot in a Grid, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (robot_in_a_grid "robot_in_a_grid.cpp" "robot_in_a_grid.h")

# TODO: Add tests and install targets if needed.
