# CMakeList.txt : CMake project for Triple Step, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (triple_step "triple_step.cpp" "triple_step.h")

# TODO: Add tests and install targets if needed.
