# CMakeList.txt : CMake project for Binary Tree Check, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (binary_tree_check "binary_tree_check.cpp" "binary_tree_check.h")

# TODO: Add tests and install targets if needed.
